fixed border and text overlap issues

--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ body {
 
 .bookshelf div {
     text-align: center;
-    border: 1px solid #f0f8ff;
     width: 16vw;
     padding: 1%;
     color: #f0f8ff;
